// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NftListCardCreatorsProfileGraph > render count 1`] = `
"<div id="test-wrapper">
  <div class="flex h-10">
    <div class="flex items-center justify-center rounded-full bg-neutral-100 outline outline-2 outline-neutral-90 paragraph-inter-14-semi-bold size-10"> +1</div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`NftListCardCreatorsProfileGraph > render creator 1`] = `
"<div id="test-wrapper">
  <div class="flex h-10">
    <lukso-profile size="small" profile-url="https://example.com/profile-image.jpg" profile-address="0x123" has-identicon=""></lukso-profile>
    <div class="flex flex-col justify-center gap-1 pl-2">
      <div class="paragraph-inter-10-semi-bold text-neutral-60">Created by</div>
      <lukso-username name="John Doe" address="0x123" size="x-small" class="flex" name-color="neutral-20"></lukso-username>
    </div>
  </div>
</div>"
`;

exports[`NftListCardCreatorsProfileGraph > render empty creator 1`] = `
"<div id="test-wrapper">
  <div class="flex h-10">
    <lukso-profile size="small" has-identicon=""></lukso-profile>
    <!--v-if-->
  </div>
</div>"
`;

exports[`NftListCardCreatorsProfileGraph > render loading state 1`] = `
"<div id="test-wrapper">
  <!--v-if-->
</div>"
`;

exports[`NftListCardCreatorsProfileGraph > when small size > render count 1`] = `
"<div id="test-wrapper">
  <div class="flex h-6">
    <div class="flex items-center justify-center rounded-full bg-neutral-100 outline outline-2 outline-neutral-90 paragraph-inter-10-semi-bold size-6"> +1</div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`NftListCardCreatorsProfileGraph > when small size > render creator 1`] = `
"<div id="test-wrapper">
  <div class="flex h-6">
    <lukso-profile size="x-small" profile-url="https://example.com/profile-image.jpg" profile-address="0x123" has-identicon=""></lukso-profile>
    <div class="flex flex-col justify-center pl-1">
      <div class="paragraph-inter-10-semi-bold text-neutral-60">Created by</div>
      <lukso-username name="John Doe" address="0x123" size="x-small" class="flex" name-color="neutral-20"></lukso-username>
    </div>
  </div>
</div>"
`;

exports[`NftListCardCreatorsProfileGraph > when small size > render loading state 1`] = `
"<div id="test-wrapper">
  <!--v-if-->
</div>"
`;
